--- a/libft/Makefile
+++ b/libft/Makefile
@@ -71,7 +71,13 @@ SRC = ft_bzero.c \
 		ft_memset.c\
 		get_next_line.c\
 		ft_printf_color.c\
-		ft_printf_basic.c
+		ft_printf_basic.c\
+		ft_putmatrix.c\
+		ft_free_mtx.c\
+		ft_cursor_goto.c\
+		ft_termcmd.c\
+		ft_clrscreen.c\
+		ft_error.c
 OBJ = $(SRC:.c=.o)
 
 # all rule
